Fixed dark mode for text editor

--- a/client/src/css/textEditor.css
+++ b/client/src/css/textEditor.css
@@ -1,17 +1,17 @@
 .text-editor {
     margin-top: var(--mantine-spacing-sm);
-    border: 1px solid var(--mantine-color-gray-3);
+    border: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-4));
     border-radius: var(--mantine-radius-md);
 }
 
 .text-editor-menu {
     padding: 8px var(--mantine-spacing-sm);
-    border-bottom: 1px solid var(--mantine-color-gray-3);
+    border-bottom: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-4));
     border-top-left-radius: var(--mantine-radius-md);
     border-top-right-radius: var(--mantine-radius-md);
     gap: 2px;
     z-index: 98;
-    background-color: var(--mantine-color-white);
+    background-color: var(--mantine-color-body);
     position: sticky;
     top: var(--header-height);
 }
@@ -43,7 +43,7 @@
     }
 
     pre {
-        background-color: var(--mantine-color-gray-0);
+        background-color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
         font-family: var(--mantine-font-family-monospace);
         font-size: var(--mantine-font-size-xs);
         line-height: var(--mantine-line-height);
